# admin-portal-by-cursor

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
config/: default.toml  local.toml
migrations/: 0001_init.sql
src/: bootstrap.rs  config.rs  lib.rs  main.rs  state.rs
src/application/: auth_service.rs  data_catalog_service.rs  mod.rs  permission_service.rs  user_service.rs
src/domain/: events.rs  group.rs  mod.rs  permission.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: jwt.rs  password.rs
src/infrastructure/clickhouse/: mod.rs
src/infrastructure/kafka/: mod.rs
src/infrastructure/postgres/: mod.rs  repositories.rs
src/interfaces/http/: extractors.rs  mod.rs  router.rs
src/interfaces/http/handlers/: auth.rs  catalog.rs  mod.rs  users.rs
src/interfaces/http/middleware/: auth.rs  permission.rs
src/shared/: errors.rs
