[package]
name = "admin_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "json"] }
bitflags = "2.6.0"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
clickhouse = "0.11.6"
config = "0.14.0"
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate", "bigdecimal", "json"] }
thiserror = "1.0.69"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
rand_core = "0.6.4"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }
